--- a/genindex.html
+++ b/genindex.html
@@ -202,6 +202,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.boost.is_buying_crv_for_boost">is_buying_crv_for_boost() (in module yearn_treasury.rules.other_expense.boost)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.yfi.is_buying_with_auction">is_buying_with_auction() (in module yearn_treasury.rules.ignore.swaps.yfi)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.yfi.is_buying_with_buyer">is_buying_with_buyer() (in module yearn_treasury.rules.ignore.swaps.yfi)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.security.is_chainsec_audit">is_chainsec_audit() (in module yearn_treasury.rules.expense.security)</a>
