deploy: 9ce7d22a3a63dc49f1a7e1a3d444f0e63d26bbe9

--- a/genindex.html
+++ b/genindex.html
@@ -286,6 +286,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.misc.is_one_yfi_for_signers">is_one_yfi_for_signers() (in module yearn_treasury.rules.other_expense.misc)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.otc.is_otc_swap">is_otc_swap() (in module yearn_treasury.rules.ignore.swaps.otc)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.security.is_other_audit">is_other_audit() (in module yearn_treasury.rules.expense.security)</a>
 </li>
       <li><a href="source/yearn_treasury.budget.html#yearn_treasury.budget.BudgetRequest.is_paid">is_paid() (yearn_treasury.budget.BudgetRequest method)</a>
@@ -294,10 +296,10 @@
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.pooltogether.is_pooltogether_deposit">is_pooltogether_deposit() (in module yearn_treasury.rules.ignore.swaps.pooltogether)</a>
 </li>
-      <li><a href="source/yearn_treasury.budget.html#yearn_treasury.budget.BudgetRequest.is_rejected">is_rejected() (yearn_treasury.budget.BudgetRequest method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/yearn_treasury.budget.html#yearn_treasury.budget.BudgetRequest.is_rejected">is_rejected() (yearn_treasury.budget.BudgetRequest method)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.general.is_returned_fundus">is_returned_fundus() (in module yearn_treasury.rules.ignore.general)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_rkp3r">is_rkp3r() (in module yearn_treasury.rules.ignore.passthru)</a>
@@ -483,6 +485,8 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.gearbox">yearn_treasury.rules.ignore.swaps.gearbox</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.iearn">yearn_treasury.rules.ignore.swaps.iearn</a>
+</li>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.otc">yearn_treasury.rules.ignore.swaps.otc</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.pooltogether">yearn_treasury.rules.ignore.swaps.pooltogether</a>
 </li>
@@ -784,6 +788,13 @@
 </li>
       </ul></li>
       <li>
+    yearn_treasury.rules.ignore.swaps.otc
+
+      <ul>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.otc">module</a>
+</li>
+      </ul></li>
+      <li>
     yearn_treasury.rules.ignore.swaps.pooltogether
 
       <ul>
@@ -797,6 +808,8 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.synthetix">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     yearn_treasury.rules.ignore.swaps.uniswap
 
@@ -804,8 +817,6 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.uniswap">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     yearn_treasury.rules.ignore.swaps.unwrapper
 
