--- a/_modules/index.html
+++ b/_modules/index.html
@@ -87,6 +87,7 @@
 <li><a href="yearn_treasury/rules/ignore/swaps/curve.html">yearn_treasury.rules.ignore.swaps.curve</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/gearbox.html">yearn_treasury.rules.ignore.swaps.gearbox</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/iearn.html">yearn_treasury.rules.ignore.swaps.iearn</a></li>
+<li><a href="yearn_treasury/rules/ignore/swaps/otc.html">yearn_treasury.rules.ignore.swaps.otc</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/pooltogether.html">yearn_treasury.rules.ignore.swaps.pooltogether</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/synthetix.html">yearn_treasury.rules.ignore.swaps.synthetix</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/uniswap.html">yearn_treasury.rules.ignore.swaps.uniswap</a></li>
