--- a/genindex.html
+++ b/genindex.html
@@ -214,6 +214,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.compound.is_compound_withdrawal">is_compound_withdrawal() (in module yearn_treasury.rules.ignore.swaps.compound)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.conversion_factory.is_conversion_factory">is_conversion_factory() (in module yearn_treasury.rules.ignore.swaps.conversion_factory)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.people.is_coordinape">is_coordinape() (in module yearn_treasury.rules.expense.people)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.other_income.html#yearn_treasury.rules.other_income.is_cowswap_gas_reimbursement">is_cowswap_gas_reimbursement() (in module yearn_treasury.rules.other_income)</a>
@@ -477,6 +479,8 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.aave">yearn_treasury.rules.ignore.swaps.aave</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.compound">yearn_treasury.rules.ignore.swaps.compound</a>
+</li>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.conversion_factory">yearn_treasury.rules.ignore.swaps.conversion_factory</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.cowswap">yearn_treasury.rules.ignore.swaps.cowswap</a>
 </li>
@@ -757,6 +761,13 @@
 
       <ul>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.compound">module</a>
+</li>
+      </ul></li>
+      <li>
+    yearn_treasury.rules.ignore.swaps.conversion_factory
+
+      <ul>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.conversion_factory">module</a>
 </li>
       </ul></li>
       <li>
