deploy: 5e4d645a6e7ac0312d232e885ebc28820822bdd0

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -106,13 +106,7 @@
 <li><a href="yearn_treasury/rules/other_expense/dyfi.html">yearn_treasury.rules.other_expense.dyfi</a></li>
 <li><a href="yearn_treasury/rules/other_expense/events.html">yearn_treasury.rules.other_expense.events</a></li>
 <li><a href="yearn_treasury/rules/other_expense/misc.html">yearn_treasury.rules.other_expense.misc</a></li>
-<li><a href="yearn_treasury/rules/other_income.html">yearn_treasury.rules.other_income</a></li>
-<li><a href="yearn_treasury/rules/revenue/bribes.html">yearn_treasury.rules.revenue.bribes</a></li>
-<li><a href="yearn_treasury/rules/revenue/farming.html">yearn_treasury.rules.revenue.farming</a></li>
-<li><a href="yearn_treasury/rules/revenue/keepcoins.html">yearn_treasury.rules.revenue.keepcoins</a></li>
-<li><a href="yearn_treasury/rules/revenue/seasolver.html">yearn_treasury.rules.revenue.seasolver</a></li>
-<li><a href="yearn_treasury/rules/revenue/vaults.html">yearn_treasury.rules.revenue.vaults</a></li>
-<li><a href="yearn_treasury/rules/revenue/yteams.html">yearn_treasury.rules.revenue.yteams</a></li>
+<li><a href="yearn_treasury/rules/other_income/airdrops.html">yearn_treasury.rules.other_income.airdrops</a></li>
 </ul>
 
            </div>
