--- a/genindex.html
+++ b/genindex.html
@@ -298,10 +298,10 @@
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.pooltogether.is_pooltogether_deposit">is_pooltogether_deposit() (in module yearn_treasury.rules.ignore.swaps.pooltogether)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/yearn_treasury.budget.html#yearn_treasury.budget.BudgetRequest.is_rejected">is_rejected() (yearn_treasury.budget.BudgetRequest method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.general.is_returned_fundus">is_returned_fundus() (in module yearn_treasury.rules.ignore.general)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_rkp3r">is_rkp3r() (in module yearn_treasury.rules.ignore.passthru)</a>
@@ -319,6 +319,8 @@
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.ygov.is_sent_to_ygov">is_sent_to_ygov() (in module yearn_treasury.rules.ignore.ygov)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.farming.is_sex">is_sex() (in module yearn_treasury.rules.revenue.farming)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.people.is_simple_vesting_escrow">is_simple_vesting_escrow() (in module yearn_treasury.rules.expense.people)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.bugs.is_slippage_bug_reimbursement">is_slippage_bug_reimbursement() (in module yearn_treasury.rules.other_expense.bugs)</a>
 </li>
