deploy: 74f5cd8b2a1b39544ceb2a6ec406a87196363f12

--- a/genindex.html
+++ b/genindex.html
@@ -418,6 +418,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_yprisma_migration">is_yprisma_migration() (in module yearn_treasury.rules.ignore.passthru)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.security.is_ysecurity">is_ysecurity() (in module yearn_treasury.rules.expense.security)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.yteams.is_yteam_rev_share">is_yteam_rev_share() (in module yearn_treasury.rules.revenue.yteams)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.bugs.is_yyfi_fee_reimbursement">is_yyfi_fee_reimbursement() (in module yearn_treasury.rules.other_expense.bugs)</a>
