--- a/_modules/yearn_treasury/rules/expense/security.html
+++ b/_modules/yearn_treasury/rules/expense/security.html
@@ -87,6 +87,7 @@
 
 <span class="n">security</span><span class="p">:</span> <span class="n">Final</span> <span class="o">=</span> <span class="n">expense</span><span class="p">(</span><span class="s2">&quot;Security&quot;</span><span class="p">)</span>
 <span class="n">audits</span><span class="p">:</span> <span class="n">Final</span> <span class="o">=</span> <span class="n">security</span><span class="p">(</span><span class="s2">&quot;Audits&quot;</span><span class="p">)</span>
+<span class="n">grants</span><span class="p">:</span> <span class="n">Final</span> <span class="o">=</span> <span class="n">security</span><span class="p">(</span><span class="s2">&quot;Grants&quot;</span><span class="p">)</span>
 
 
 <div class="viewcode-block" id="is_yacademy_audit">
@@ -229,6 +230,17 @@
         <span class="n">tx</span><span class="o">.</span><span class="n">hash</span> <span class="o">==</span> <span class="s2">&quot;0xca61496c32806ba34f0deb331c32969eda11c947fdd6235173e6fa13d9a1c288&quot;</span>
         <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">log_index</span> <span class="o">==</span> <span class="mi">152</span>
     <span class="p">)</span></div>
+
+
+
+<div class="viewcode-block" id="is_ysecurity">
+<a class="viewcode-back" href="../../../../source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.security.is_ysecurity">[docs]</a>
+<span class="nd">@grants</span><span class="p">(</span><span class="s2">&quot;ySecurity&quot;</span><span class="p">,</span> <span class="n">Network</span><span class="o">.</span><span class="n">Mainnet</span><span class="p">)</span>
+<span class="k">def</span><span class="w"> </span><span class="nf">is_ysecurity</span><span class="p">(</span><span class="n">tx</span><span class="p">:</span> <span class="n">TreasuryTx</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    https://github.com/yearn/budget/issues/145</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+    <span class="k">return</span> <span class="n">tx</span><span class="o">.</span><span class="n">to_address</span> <span class="o">==</span> <span class="s2">&quot;0x4851C7C7163bdF04A22C9e12Ab77e184a5dB8F0E&quot;</span></div>
 
 </pre></div>
 
