--- a/genindex.html
+++ b/genindex.html
@@ -262,6 +262,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.donations.is_gitcoin_matching_donation">is_gitcoin_matching_donation() (in module yearn_treasury.rules.other_expense.donations)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.people.is_gteam">is_gteam() (in module yearn_treasury.rules.expense.people)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.bugs.is_gusd_vault_bug_reimbursement">is_gusd_vault_bug_reimbursement() (in module yearn_treasury.rules.other_expense.bugs)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_idle">is_idle() (in module yearn_treasury.rules.ignore.passthru)</a>
@@ -297,6 +299,8 @@
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.uniswap.is_pool">is_pool() (in module yearn_treasury.rules.ignore.swaps.uniswap)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.pooltogether.is_pooltogether_deposit">is_pooltogether_deposit() (in module yearn_treasury.rules.ignore.swaps.pooltogether)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.people.is_rantom">is_rantom() (in module yearn_treasury.rules.expense.people)</a>
 </li>
       <li><a href="source/yearn_treasury.budget.html#yearn_treasury.budget.BudgetRequest.is_rejected">is_rejected() (yearn_treasury.budget.BudgetRequest method)</a>
 </li>
@@ -390,6 +394,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.woofy.is_woofy">is_woofy() (in module yearn_treasury.rules.ignore.swaps.woofy)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.people.is_worms">is_worms() (in module yearn_treasury.rules.expense.people)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.security.is_yacademy_audit">is_yacademy_audit() (in module yearn_treasury.rules.expense.security)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.bribes.is_ybribe_fees">is_ybribe_fees() (in module yearn_treasury.rules.revenue.bribes)</a>
@@ -409,6 +415,8 @@
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.maker.is_yfi_cdp_withdrawal">is_yfi_cdp_withdrawal() (in module yearn_treasury.rules.ignore.maker)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.people.is_ygift_grant">is_ygift_grant() (in module yearn_treasury.rules.expense.people)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.people.is_yhaas_trinity_ii">is_yhaas_trinity_ii() (in module yearn_treasury.rules.expense.people)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.yla.is_yla_deposit">is_yla_deposit() (in module yearn_treasury.rules.ignore.swaps.yla)</a>
 </li>
