--- a/_modules/yearn_treasury/rules/cost_of_revenue/gas.html
+++ b/_modules/yearn_treasury/rules/cost_of_revenue/gas.html
@@ -108,7 +108,7 @@
 
 <span class="n">_STRATEGIST_GAS_HASHES</span><span class="p">:</span> <span class="n">Final</span><span class="p">[</span><span class="n">Set</span><span class="p">[</span><span class="n">HexStr</span><span class="p">]]</span> <span class="o">=</span> <span class="p">{}</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">CHAINID</span><span class="p">,</span> <span class="nb">set</span><span class="p">())</span>
 
-<span class="n">_RETURNED_GAS_HASHES</span><span class="p">:</span> <span class="n">Final</span><span class="p">[</span><span class="n">Set</span><span class="p">[</span><span class="n">HexStr</span><span class="p">]]</span> <span class="o">=</span> <span class="p">{</span>
+<span class="n">_RETURNED_GAS_HASHES</span><span class="p">:</span> <span class="n">Final</span><span class="p">[</span><span class="n">Set</span><span class="p">[</span><span class="n">HexStr</span><span class="p">]]</span> <span class="o">=</span> <span class="p">{</span>  <span class="c1"># type: ignore [assignment]</span>
     <span class="n">Network</span><span class="o">.</span><span class="n">Mainnet</span><span class="p">:</span> <span class="p">{</span>
         <span class="s2">&quot;0x86fee63ec8efb0e7320a6d48ac3890b1089b77a3d9ed74cade389f512471c299&quot;</span><span class="p">,</span>
         <span class="s2">&quot;0xa77c4f7596968fef96565a0025cc6f9881622f62cc4c823232f9c9000ba5f981&quot;</span><span class="p">,</span>
