deploy: 50318d2163ab15e175ab613d4ccff71d657b42f6

--- a/genindex.html
+++ b/genindex.html
@@ -286,6 +286,10 @@
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.unit.is_minting_usdp">is_minting_usdp() (in module yearn_treasury.rules.ignore.unit)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_misc_passthru_fantom">is_misc_passthru_fantom() (in module yearn_treasury.rules.ignore.passthru)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_misc_passthru_mainnet">is_misc_passthru_mainnet() (in module yearn_treasury.rules.ignore.passthru)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.security.is_mixbytes_audit">is_mixbytes_audit() (in module yearn_treasury.rules.expense.security)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.misc.is_one_yfi_for_signers">is_one_yfi_for_signers() (in module yearn_treasury.rules.other_expense.misc)</a>
@@ -302,10 +306,10 @@
 </li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.people.is_rantom">is_rantom() (in module yearn_treasury.rules.expense.people)</a>
 </li>
-      <li><a href="source/yearn_treasury.budget.html#yearn_treasury.budget.BudgetRequest.is_rejected">is_rejected() (yearn_treasury.budget.BudgetRequest method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/yearn_treasury.budget.html#yearn_treasury.budget.BudgetRequest.is_rejected">is_rejected() (yearn_treasury.budget.BudgetRequest method)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.general.is_returned_fundus">is_returned_fundus() (in module yearn_treasury.rules.ignore.general)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_rkp3r">is_rkp3r() (in module yearn_treasury.rules.ignore.passthru)</a>
